# LocalLLM

./: .clang-format  .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  architecture.md  main.cpp
.claude/skills/gtest-prime/: SKILL.md
include/localllm/app/: application.h  cli_options.h
include/localllm/common/: file_util.h  flags.h  logging.h  status.h
include/localllm/executor/: qwen_executor.h
include/localllm/model/: model_weights.h  qwen_config.h  safetensors_loader.h
include/localllm/runtime/: sampling.h
include/localllm/tokenizer/: bpe_tokenizer.h
src/app/: application.cpp  cli_options.cpp
src/common/: file_util.cpp  flags.cpp  logging.cpp
src/executor/: qwen_executor.cpp
src/model/: model_weights.cpp  qwen_config.cpp  safetensors_loader.cpp
src/runtime/: cuda_kernels.cu  sampling.cpp
src/tokenizer/: bpe_tokenizer.cpp
test/: bpe_tokenizer_test.cpp  cli_options_test.cpp  logging_test.cpp  qwen_config_test.cpp  qwen_executor_smoke_test.cpp  safetensors_loader_test.cpp  sampling_test.cpp  test_main.cpp
